ingressSvc.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-ingress-controller
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: ingress-nginx
  ports:
    - port: 80
      targetPort: 80
