ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bestrong-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  tls:
    - hosts:
        - bestronger.pp.ua
      secretName: bestrong-api-tls
  rules:
    - host: bestronger.pp.ua
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: docker-cicd-service
                port:
                  number: 5001
